# physics_engine

./: CMakeLists.txt  README.md
res/: staircase.txt  terrain.txt
src/: Collision.cpp  Collision.h  DynamicsWorld.cpp  DynamicsWorld.h  IPhysics.h  OctreeTriangleMeshRigidBody.cpp  OctreeTriangleMeshRigidBody.h  RigidBody.cpp  RigidBody.h  Sphere.h  SphereRigidBody.h  Triangle.h  TriangleMeshRigidBody.h  Vector3.cpp  Vector3.h  main.cpp  mesh.cpp  mesh.h
